--- a/css/style.css
+++ b/css/style.css
@@ -10,15 +10,16 @@
 
 #menu-wrapper{
   width: 80%;
-  text-align: right;
+  text-align: center;
 }
 
 #menu a li{
   display: inline-block;
   color: #167d90;
-  font-size: 24px;
+  font-size: 15px;
   padding: 0 30px;
-  font-weight: bold;
+  font-weight: thin;
+  margin-top: 10px;
 }
 
 #menu li:hover{
